Styled showcase form and bottom paragraph

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             >Try 30 Days Free <i class="fas fa-chevron-right btn-icon"></i>
           </a>
         </form>
-        <p>
+        <p class="small-text">
           Ready to watch? Enter your email to create or restart your membership.
         </p>
       </div>
