--- a/index.html
+++ b/index.html
@@ -35,5 +35,46 @@
         </p>
       </div>
     </header>
+
+    <!-- Section 1 -->
+    <div class="section-item">
+      <div class="content-item">
+        <div>
+          <h1>Enjoy on your TV.</h1>
+          <h2>
+            Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray
+            players, and more.
+          </h2>
+        </div>
+        <img src="img/TV.jpg" alt="" />
+      </div>
+    </div>
+
+    <!-- Section 2 -->
+    <div class="section-item">
+      <div class="content-item bottom">
+        <img src="img/Mobile.jpg" alt="" />
+        <div>
+          <h1>Download your shows to watch offline. TV.</h1>
+          <h2>
+            Save your favorites easily and always have something to watch.
+          </h2>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 3 -->
+    <div class="section-item">
+      <div class="content-item">
+        <div>
+          <h1>Watch everywhere.</h1>
+          <h2>
+            Stream unlimited movies and TV shows on your phone, tablet, laptop,
+            and TV without paying more.
+          </h2>
+        </div>
+        <img src="img/Device.jpg" alt="" />
+      </div>
+    </div>
   </body>
 </html>
