Added html and style for f-a-q  section

--- a/index.html
+++ b/index.html
@@ -76,5 +76,52 @@
         <img src="img/Device.jpg" alt="" />
       </div>
     </div>
+
+    <div id="faq">
+      <div class="f-a-q">
+        <h1>Frequently Asked Questions</h1>
+        <ul>
+          <li>
+            What is Netflix?<i class="fas fa-chevron-right btn-icon-2"></i>
+          </li>
+          <li>
+            How much does Netflix cost?<i
+              class="fas fa-chevron-right btn-icon-2"
+            ></i>
+          </li>
+          <li>
+            Where can I watch?<i class="fas fa-chevron-right btn-icon-2"></i>
+          </li>
+          <li>
+            How do I cancel?<i class="fas fa-chevron-right btn-icon-2"></i>
+          </li>
+          <li>
+            What can I watch on Netflix?<i
+              class="fas fa-chevron-right btn-icon-2"
+            ></i>
+          </li>
+          <li>
+            How does the free trial work?<i
+              class="fas fa-chevron-right btn-icon-2"
+            ></i>
+          </li>
+        </ul>
+
+        <form class="email-form">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email address"
+          />
+          <a href="#" class="btn btn-xl"
+            >Try 30 Days Free <i class="fas fa-chevron-right btn-icon"></i>
+          </a>
+        </form>
+        <p class="small-text">
+          Ready to watch? Enter your email to create or restart your membership.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
