--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/2b96c2f4ed.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
+    <title>Netflix - Watch TV Shows Online, Watch Movies Online</title>
   </head>
   <body>
     <header class="showcase">
@@ -18,25 +18,27 @@
       </div>
       <div class="showcase-content">
         <h1>Unlimited movies, TV shows, and more.</h1>
-        <p>Watch anywhere. Cancel anytime.</p>
-        <form class="email-form">
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Email address"
-          />
-          <a href="#" class="btn btn-xl"
-            >Try 30 Days Free <i class="fas fa-chevron-right btn-icon"></i>
-          </a>
-        </form>
-        <p class="small-text">
-          Ready to watch? Enter your email to create or restart your membership.
-        </p>
+        <h2>Watch anywhere. Cancel anytime.</h2>
+        <div class="email-form">
+          <h3>
+            Ready to watch? Enter your email to create or restart your
+            membership.
+          </h3>
+          <div class="email-form-inner">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Email address"
+            />
+            <a href="#" class="btn btn-lg"
+              >Try 30 Days Free <i class="fas fa-chevron-right btn-icon"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </header>
-
-    <!-- Section 1 -->
+    <!-- 
     <div class="section-item">
       <div class="content-item">
         <div>
@@ -50,7 +52,6 @@
       </div>
     </div>
 
-    <!-- Section 2 -->
     <div class="section-item">
       <div class="content-item bottom">
         <img src="img/Mobile.jpg" alt="" />
@@ -63,7 +64,6 @@
       </div>
     </div>
 
-    <!-- Section 3 -->
     <div class="section-item">
       <div class="content-item">
         <div>
@@ -153,6 +153,6 @@
           <li><a href="#">Legal Notices</a></li>
         </ul>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
