--- a/index.html
+++ b/index.html
@@ -38,45 +38,52 @@
         </div>
       </div>
     </header>
-    <!-- 
-    <div class="section-item">
-      <div class="content-item">
-        <div>
+
+    <div class="how-to-watch">
+      <div class="how-to-tv">
+        <div class="how-to-text">
           <h1>Enjoy on your TV.</h1>
           <h2>
             Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray
             players, and more.
           </h2>
         </div>
-        <img src="img/TV.jpg" alt="" />
-      </div>
-    </div>
-
-    <div class="section-item">
-      <div class="content-item bottom">
-        <img src="img/Mobile.jpg" alt="" />
-        <div>
-          <h1>Download your shows to watch offline. TV.</h1>
-          <h2>
-            Save your favorites easily and always have something to watch.
-          </h2>
+        <div class="how-to-image">
+          <img src="img/TV.jpg" alt="" />
         </div>
       </div>
     </div>
 
-    <div class="section-item">
-      <div class="content-item">
-        <div>
+    <div class="how-to-watch">
+      <div class="how-to-download">
+        <div class="how-to-text">
+          <h1>Download your shows to watch offline.</h1>
+          <h2>
+            Save your favorites easily and always have something to watch.
+          </h2>
+        </div>
+        <div class="how-to-image">
+          <img src="img/Mobile.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+
+    <div class="how-to-watch">
+      <div class="how-to-everywhere">
+        <div class="how-to-text">
           <h1>Watch everywhere.</h1>
           <h2>
             Stream unlimited movies and TV shows on your phone, tablet, laptop,
             and TV without paying more.
           </h2>
         </div>
-        <img src="img/Device.jpg" alt="" />
+        <div class="how-to-image">
+          <img src="img/Device.jpg" alt="" />
+        </div>
       </div>
     </div>
 
+    <!--
     <div id="faq">
       <div class="f-a-q">
         <h1>Frequently Asked Questions</h1>
