--- a/index.html
+++ b/index.html
@@ -83,83 +83,83 @@
       </div>
     </div>
 
-    <!--
-    <div id="faq">
-      <div class="f-a-q">
+    <div class="faq">
+      <div class="faq-content">
         <h1>Frequently Asked Questions</h1>
-        <ul>
-          <li>
-            What is Netflix?<i class="fas fa-chevron-right btn-icon-2"></i>
-          </li>
+        <ul class="faq-list">
+          <li>What is Netflix?<i class="fas fa-chevron-right btn-icon"></i></li>
           <li>
             How much does Netflix cost?<i
-              class="fas fa-chevron-right btn-icon-2"
+              class="fas fa-chevron-right btn-icon"
             ></i>
           </li>
           <li>
-            Where can I watch?<i class="fas fa-chevron-right btn-icon-2"></i>
+            Where can I watch?<i class="fas fa-chevron-right btn-icon"></i>
           </li>
-          <li>
-            How do I cancel?<i class="fas fa-chevron-right btn-icon-2"></i>
-          </li>
+          <li>How do I cancel?<i class="fas fa-chevron-right btn-icon"></i></li>
           <li>
             What can I watch on Netflix?<i
-              class="fas fa-chevron-right btn-icon-2"
+              class="fas fa-chevron-right btn-icon"
             ></i>
           </li>
           <li>
             How does the free trial work?<i
-              class="fas fa-chevron-right btn-icon-2"
+              class="fas fa-chevron-right btn-icon"
             ></i>
           </li>
         </ul>
-
-        <form class="email-form">
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Email address"
-          />
-          <a href="#" class="btn btn-xl"
-            >Try 30 Days Free <i class="fas fa-chevron-right btn-icon"></i>
-          </a>
-        </form>
-        <p class="small-text">
-          Ready to watch? Enter your email to create or restart your membership.
-        </p>
+        <div class="email-form">
+          <h3>
+            Ready to watch? Enter your email to create or restart your
+            membership.
+          </h3>
+          <div class="email-form-inner">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Email address"
+            />
+            <a href="#" class="btn btn-lg"
+              >Try 30 Days Free <i class="fas fa-chevron-right btn-icon"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
 
     <footer class="footer">
-      <p>Questions? Call 1-844-505-2993</p>
-      <div class="footer-cols">
-        <ul>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Investor Relations</a></li>
-          <li><a href="#">Ways To Watch</a></li>
-          <li><a href="#">Corporate Information</a></li>
-          <li><a href="#">Netflix Originals</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Help Center</a></li>
-          <li><a href="#">Jobs</a></li>
-          <li><a href="#">Terms of Use</a></li>
-          <li><a href="#">Contact Us</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Account</a></li>
-          <li><a href="#">Redeem Gift Cards</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Speed Test</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Media Center</a></li>
-          <li><a href="#">Buy Gift Cards</a></li>
-          <li><a href="#">Cookie Preferences</a></li>
-          <li><a href="#">Legal Notices</a></li>
-        </ul>
+      <div class="footer-wrapper">
+        <p>Questions? Call 1-844-505-2993</p>
+        <div class="footer-cols">
+          <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Investor Relations</a></li>
+            <li><a href="#">Ways To Watch</a></li>
+            <li><a href="#">Corporate Information</a></li>
+            <li><a href="#">Netflix Originals</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Help Center</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Account</a></li>
+            <li><a href="#">Redeem Gift Cards</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Speed Test</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Media Center</a></li>
+            <li><a href="#">Buy Gift Cards</a></li>
+            <li><a href="#">Cookie Preferences</a></li>
+            <li><a href="#">Legal Notices</a></li>
+          </ul>
+        </div>
+        <div class="globe"><i class="fas fa-globe fa-1x"></i> English</div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
